--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #fff;
 }
   
 li {
@@ -23,22 +23,32 @@ li a {
     text-decoration: none;
 }
 
-.active {
-    background-color: #04AA6D;
+header{
+    background-color: white;
+    position: sticky;
+    z-index: 69420911;
+    width: auto;
+    height: 55px;
+    border: 1px transparent;
+    padding: 10px;
+    box-shadow: 1px 1px 10px 1px ;
+    top: 0;
 }
 
 /* Navbar container */
 .navbar {
     overflow: hidden;
-    background-color: #333;
-    font-family: Arial;
+    background-color: #fff;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: large;
 }
 
 /* Links inside the navbar */
 .navbar a {
     float: left;
     font-size: 16px;
-    color: white;
+    color: black;
+    font-size: 150%;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -52,10 +62,10 @@ li a {
 
 /* Dropdown button */
 .dropdown .dropbtn {
-    font-size: 16px;
+    font-size: 150%;
     border: none;
     outline: none;
-    color: white;
+    color: black;
     padding: 14px 16px;
     background-color: inherit;
     font-family: inherit; /* Important for vertical align on mobile phones */
@@ -64,6 +74,7 @@ li a {
 
 /* Add a red background color to navbar links on hover */
 .navbar a:hover, .dropdown:hover .dropbtn {
+    color: white;
     background-color: #111;
 }
 
@@ -89,10 +100,44 @@ li a {
 
 /* Add a grey background color to dropdown links on hover */
 .dropdown-content a:hover {
-    background-color: #ddd;
+    color: white;
+    background-color: #111;
 }
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
     display: block;
 }
+
+.banner {
+    background: linear-gradient(45deg, rgba(167, 58, 218, 0.85) 0%, rgba(221, 86, 149, 0.85) 100%),
+    url('img/critter-arena.jpeg');
+    width: 100%;
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.banner .banner-text{
+    font-family: 'Roboto', sans-serif;
+    font-size: 100px;
+    font-size: 4.75rem;
+    font-weight: normal !important;
+    line-height: 120px;
+    line-height: 7.5rem;
+    letter-spacing: -4px;
+    position: absolute;
+    bottom: 5%;
+    left: 10%;
+  }
+  
+  .banner .banner-text h4{
+    color:#ca2bc2;
+    -webkit-text-stroke: 1px #fff;
+    -webkit-text-fill-color: #ca2bc2;
+  }
+  
+  .banner .banner-text h1{
+    color: #fff;
+  }
+  
