--- a/style.css
+++ b/style.css
@@ -23,29 +23,19 @@ li a {
     text-decoration: none;
 }
 
-header{
-    background-color: white;
-    position: sticky;
-    z-index: 69420911;
-    width: auto;
-    height: 55px;
-    border: 1px transparent;
-    padding: 10px;
-    box-shadow: 1px 1px 10px 1px ;
-    top: 0;
-}
-
 /* Navbar container */
 .navbar {
     overflow: hidden;
     background-color: #fff;
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size: large;
+    font-family: 'Nunito', sans-serif;
+    font-size: small;
 }
 
 /* Links inside the navbar */
 .navbar a {
-    float: left;
+    display: inline-block;
+    position: relative;
+    color: #0087ca;
     font-size: 16px;
     color: black;
     font-size: 150%;
@@ -72,10 +62,15 @@ header{
     margin: 0; /* Important for vertical align on mobile phones */
 }
 
-/* Add a red background color to navbar links on hover */
-.navbar a:hover, .dropdown:hover .dropbtn {
-    color: white;
-    background-color: #111;
+.navbar ul li a:hover:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #0087ca;
+    transform-origin: bottom right;
 }
 
 /* Dropdown content (hidden by default) */
@@ -129,15 +124,14 @@ header{
     position: absolute;
     bottom: 5%;
     left: 10%;
-  }
-  
-  .banner .banner-text h4{
+}
+
+.banner .banner-text h4{
     color:#ca2bc2;
     -webkit-text-stroke: 1px #fff;
     -webkit-text-fill-color: #ca2bc2;
-  }
-  
-  .banner .banner-text h1{
+}
+
+.banner .banner-text h1{
     color: #fff;
-  }
-  
+}
