--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ li {
 li a {
     display: block;
     color: white;
-    text-align: center;
+    text-align: left;
     padding: 14px 16px;
     text-decoration: none;
 }
@@ -40,7 +40,7 @@ li a {
     font-size: 16px;
     color: black;
     font-size: 150%;
-    text-align: center;
+    text-align: right;
     padding: 14px 16px;
     text-decoration: none;
 }
@@ -171,8 +171,13 @@ li a {
     display: none;
 }
 
+.slideshow-active {
+    display: block;
+}
+
 .slideshow img {
-    vertical-align: mi;
+    vertical-align: middle;
+    width: 100%;
 }
   
 /* Next & previous buttons */
