--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: white;
+    background-color: violet;
     float: right;
 }
   
@@ -33,7 +33,7 @@ li a {
 /* Navbar container */
 .navbar {
     overflow: hidden;
-    background-color: #fff;
+    background-color: violet;
     font-family: 'Nunito', sans-serif;
     font-size: small;
 }
@@ -44,7 +44,7 @@ li a {
     position: relative;
     color: #0087ca;
     font-size: 16px;
-    color: black;
+    color: white;
     font-size: 150%;
     text-align: right;
     padding: 14px 16px;
@@ -62,7 +62,7 @@ li a {
     font-size: 150%;
     border: none;
     outline: none;
-    color: black;
+    color: white;
     padding: 14px 16px;
     background-color: inherit;
     font-family: inherit; /* Important for vertical align on mobile phones */
@@ -78,15 +78,15 @@ li a {
     left: 0;
     background-color: #0087ca;
     transform-origin: bottom right; */
-    color: white;
-    background-color: #111;
+    color: black;
+    background-color: white;
 }
 
 /* Dropdown content (hidden by default) */
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: violet;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -107,8 +107,8 @@ li a {
 
 /* Add a grey background color to dropdown links on hover */
 .dropdown-content a:hover {
-    color: white;
-    background-color: #111;
+    color: black;
+    background-color: white;
     border-radius: 5px;
 }
 
@@ -117,18 +117,38 @@ li a {
     display: block;
 }
 
-/* Banner */
-.banner {
-    background: linear-gradient(45deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0.75) 100%),
+/* Home Banner */
+.banner-home {
+    background: linear-gradient(45deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0.75) 100%), 
     url('img/critter-arena.jpeg');
     width: 100%;
-    height: 100vh;
+    height: 110vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+/* Pricing Banner */
+.banner-pricing {
+    background: linear-gradient(45deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0.75) 100%), 
+    url('img/Cat-Banner.jpg');
+    width: 100%;
+    height: 110vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+/* Contact Banner */
+.banner-contact {
+    background: linear-gradient(45deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0.75) 100%), 
+    url('img/Dachshund-Banner.jpg');
+    width: 100%;
+    height: 110vh;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 /* Banner Text */
-.banner .banner-text{
+.banner-text{
     font-family: 'Roboto', sans-serif;
     font-size: 100px;
     font-size: 4.75rem;
@@ -142,14 +162,14 @@ li a {
 }
 
 /* Banner Subtitle */
-.banner .banner-text h4{
-    color:#ca2bc2;
+.banner-text h4{
+    color: violet;
     -webkit-text-stroke: 1px #fff;
-    -webkit-text-fill-color: #ca2bc2;
+    -webkit-text-fill-color: violet;
 }
 
 /* Banner Title */
-.banner .banner-text h1{
+.banner-text h1{
     color: #fff;
 }
 
@@ -158,6 +178,7 @@ li a {
     max-width: 750px;
     margin: 100px auto;
     font-size: 1.125em;
+    font-family: 'Nunito', sans-serif;
 }
 
 /* Info Image */
@@ -218,6 +239,7 @@ li a {
 /* Caption text */
 .slideshow-text {
     color: #f2f2f2;
+    font-family: 'Nunito', sans-serif;
     font-size: 15px;
     padding: 8px 12px;
     position: absolute;
@@ -269,18 +291,31 @@ li a {
     to {opacity: 1}
 }
 
+/* SPCA Logo */
+.spca-logo {
+    text-align: center;
+    width: 100%;
+    height: auto;
+}
+
 /* Footer */
 .footer {
-    margin-top: 100px;
-    background: linear-gradient(45deg, rgb(219, 110, 186) 100%, rgb(218, 116, 218) 100%);
+    background: violet;
+    padding: 50px;
     position: relative;
+    display: grid;
+    grid-template-columns: 50% 50%;
+}
+
+/* Footer Text */
+.footer .text {
+    font-family: 'Nunito', sans-serif;
+    font-size: 1.125em;
 }
 
 /* Footer Icons */
 .footer .icons{
-    border: 10px solid transparent;
     text-align: right;
-    margin-right: 32px;
 }
 
 /* Footer Icon Images */
