--- a/style.css
+++ b/style.css
@@ -4,14 +4,14 @@
     box-sizing: border-box;
 }
 
-ul {
+.navbar ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: cornflowerblue;
 }
   
-li {
+.navbar li {
     text-align: center;
     display: inline-block;
     list-style-type: none;
@@ -22,7 +22,7 @@ li {
     transition: all 0.2s;
 }
   
-li a {
+.navbar li a {
     text-align: center;
     display: inline-block;
     color: white;
@@ -266,26 +266,70 @@ li a {
 
 /* Footer */
 .footer {
-    background: cornflowerblue;
-    padding: 50px;
-    position: relative;
-    display: grid;
-    grid-template-columns: 50% 50%;
-}
-
-/* Footer Text */
-.footer .text {
     font-family: 'Nunito', sans-serif;
-    font-size: 1.125em;
+    padding: 40px 0;
+    background-color: cornflowerblue;
 }
 
-/* Footer Icons */
-.footer .icons{
-    text-align: right;
+/* Footer Socials */
+.footer .socials {
+    text-align: center;
+    padding-bottom: 25px;
+    color: rgb(15, 15, 15);
 }
 
-/* Footer Icon Images */
-.footer a img {
-    width: 64px;
-    height: auto;
+/* Footer Socials Icons */
+.footer .socials a {
+    font-size: 24px;
+    color: inherit;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    width: 40px;
+    height: 40px;
+    line-height: 38px;
+    display: inline-block;
+    text-align: center;
+    border-radius: 50%;
+    margin: 0 8px;
+    opacity: 0.75;
+}
+
+/* Footer Socials Icons Hover */
+.footer .socials a:hover {
+    opacity: 0.95;
+}
+
+/* Footer Mini Navigation Bar */
+.footer .list ul {
+    margin-top: 0;
+    padding: 0;
+    list-style: none;
+    font-size: 18px;
+    line-height: 1.6;
+    margin-bottom: 0;
+    text-align: center;
+}
+
+.footer .list ul li {
+    display: inline-block;
+    padding: 0 15px;
+}
+
+.footer .list ul li a {
+    color: inherit;
+    text-decoration: none;
+    opacity: 0.75;
+}
+
+/* Footer Mini Navigation Bar Hover*/
+.footer .list ul li a:hover {
+    opacity: 0.95;
+}
+
+/* Footer Copyright Text */
+.footer .copyright p {
+    margin-top: 15px;
+    text-align: center;
+    font-size: 15px;
+    color: white;
+    opacity: 0.4;
 }
