--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@
 }
 
 /* Pricing Banner */
-.banner-pricing {
+.banner-events {
     background: linear-gradient(45deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0.75) 100%), 
     url('img/Cat-Banner.jpg');
     width: 100%;
